# syslog-ng

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile.am  configure.ac  requirements.txt
modules/python/pylib/: CMakeLists.txt  Makefile.am  test_pylib.sh
tests/pytest_framework/: .pylintrc  Makefile.am  Readme.md  Todo  Todo2.txt  conftest.py  pylintrc  pytest.ini  requirements.txt
tests/pytest_framework/functional_test_examples/config_related/: test_add_multiple_destinations_at_once.py  test_config_change_after_setup.py  test_config_change_after_start.py  test_default_network_drivers.py  test_multiple_src_and_dst_statements.py  test_multiple_statements.py  test_one_statement_multiple_drivers.py  test_one_statement_one_driver.py  test_raw_config.py  test_syslog_parser.py  test_using_different_destination_drivers_at_once.py
tests/pytest_framework/functional_test_examples/message_related/: test_custom_formatted_rfc3164.py  test_message_payload.py  test_rfc3164_multiple_messages.py  test_rfc5424_multiple_messages.py
tests/pytest_framework/functional_test_examples/parametrized_tests/: test_stats_level.py
tests/pytest_framework/functional_test_examples/syslog_ng_ctl_related/: test_ctl_queries.py
tests/pytest_framework/functional_test_examples/syslog_ng_process_related/: test_external_tools.py  test_multiple_syslog_ng_instances.py  test_start_stop_start.py
tests/pytest_framework/functional_tests/: test_core_file_detection.py  test_file_source_custom_single_message.py  test_file_source_generated_message_config_change.py  test_file_source_generated_multiline_message.py  test_file_source_generated_single_message.py  test_file_source_with_raw_config.py  test_minimal.py  test_pipe_source_generated_single_message.py  test_run_multiple_syslog_ng_custom_single_message.py
tests/pytest_framework/src/buffer_io/: buffer_io.py  message_parser.py  single_line_parser.py
tests/pytest_framework/src/common/: blocking.py  bufferio.py  find_in_content.py  findcontent.py  path_and_operations.py  random.py  random_id.py
tests/pytest_framework/src/driverio/: dir.py  file.py  filebasedio.py  fileinterface.py  fileio.py  filemanager.py  filewaitforevent.py
tests/pytest_framework/src/executor/: command_executor.py  executor_interface.py  process_common.py  process_executor.py
tests/pytest_framework/src/executors/: command.py  command_executor.py  process.py  process_executor.py
tests/pytest_framework/src/fileregister/: file.py
tests/pytest_framework/src/logger/: logger.py  logger_factory.py
tests/pytest_framework/src/message/: bsd.py  bsd_formatter.py  bsd_message.py  bsd_message_builder.py  ietf.py  ietf_formatter.py  ietf_message.py  ietf_message_builder.py  interface.py  log_message.py  message_builder.py  message_interface.py  messagefactory.py  syslog-ng-message-formats.txt
tests/pytest_framework/src/message_reader/: message_reader.py
tests/pytest_framework/src/meta/: syslog_ng_meta.py  testcase_meta.py
tests/python_functional/: Makefile.am  Readme.md  conftest.py  run_property_based_tests.py  tox.ini
tests/python_functional/functional_tests/: conftest.py
tests/python_functional/property_based/: test_bad_hostname.py  test_persist_name.py
tests/python_functional/shared_dir/: python_destination.py  python_source.py  python_source_fetcher.py
tests/python_functional/shared_files/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  client.p12  server.crt  server.csr  server.key
tests/python_functional/src/: Makefile.am  conftest.py
tests/python_functional/src/common/: file.py  (+3 more)
(+450 files in other folders)
